Model results & figure

--- a/main.tex
+++ b/main.tex
@@ -141,7 +141,7 @@ As reported previously in electrophysiology experiments \citep{khakhalin2014}, r
 
 The total output of observed networks tended to be higher in response to looming stimuli than to flashes (on average, 39$\pm$29\% higher for younger; 25$\pm$25\% higher for older tadpoles; $p_{t1}=$ 2e-4 and 1e-3 respectively; Fig. 2B). There was no change in this preference in development ($p_t$=0.15). There was no difference in response amplitude between looming and scrambled stimuli (average difference of $-$0.03$\pm$0.15 and $-$0.01$\pm$0.20; $p_{t1}=$ 0.45 and 0.78 for younger and older animals respectively; no difference in development $p_t=$ 0.80). These results support our prior observation that the total tectal response in tadpoles depends mostly on the dynamics of visual stimuli, rather than on their geometry \citep{khakhalin2014,jang2016}.
 
-\begin{figure*}
+\begin{figure*}[t]
 \includegraphics[width=\linewidth]{fig2.pdf}
 \caption{
 Selectivity analysis. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
@@ -235,7 +235,7 @@ As cells with higher Katz centrality tend to be activated more often \citep{flet
 
 If looming-selective cells gather information from the network, it was plausible to expect that they could be more likely connected to other selective cells, rather than to non-selective ones. To test this, we looked into \textbf{assortativity of selectivity}: a weighted correlation between selectivity scores of cells connected by edges, with strength of these edges used as weight (see Methods). We found that in both younger and older tadpoles selectivities of connected cells correlated (for stage 46: $r$=0.07$\pm$0.13, $p_{t1}$=0.04, individual $r>$0 in 9/14 experiments; for stage 49: $r$=0.07$\pm$0.10, $p_{tq}$=0.02; individual $r>$0 in 10/16 experiments). This suggests that similarly selective cells tended to be connected to each other. There was no change in this effect over development ($p_t=$ 0.9).
 
-% Plot for assortativity shows perfectly no change. Is it worth showing here?
+% Plot for assortativity shows perfectly no change. Is it worth showing it here?
 
 Finally, we checked whether higher average activity of looming-selective cells linked them into tight clusters, or "rich clubs". We calculated \textbf{local clustering coefficient} for each cell, and checked whether it correlated with cell selectivity. We found that local clustering coefficient did not correlate with cell selectivity when all cells were considered ($p_r=$ 0.6, n=2487), and across all reconstruction, correlation coefficients observed in individual experiments were not different from zero ($p_t1=$ 0.25, n=30), indicating that while selective cells tended to be connected to each other, they did not form clusters.
 
@@ -245,7 +245,7 @@ Together these results suggest that the distribution of selective cells in tecta
 
 \subsection*{Developmental Model}
 
-As tectal networks are complex and noisy, it was hard to provide a clear mechanistic interpretation of our experimental results. To compensate for this limitation, and to provide a theoretical counterpoint to our experimental observations, we built a mathematical model of the developing tectum, and ran this model through the same set of measurements that we applied to our experiments. The model consisted of 81 artificial neurons, arranged in a 9$\times$9 grid, and all originally connected to each other (every neuron to every neuron) with random positive (excitatory) synaptic weights (Fig XXX). The model operated in 10 ms increments, and we interpreted the output of each neuron as its instantaneous firing rate. At each time step we looked at the network activity in the previous step, and summed up the inputs each neuron would receive from each other neuron. We then used a sliding logistic function to translate these synaptic inputs into postsynaptic spiking (see “Methods” for details).
+As our recordings were noisy, and sample sizes relatively small, it was hard to expect that we would uncover clear links between selectivity and connectivity of tectal cells in experimental results alone. To compensate for these limitations, and provide a counterpoint to our experimental results, we built a mathematical model of the developing tectum, and ran its results through exactly same set of analyses that we used for our experiments. The model consisted of 81 artificial neurons, arranged in a 9$\times$9 grid, that were all originally connected to each other (every neuron to every neuron) with random positive (excitatory) synaptic weights (Figure 7A). The model operated in discrete time, in 10 ms increments, and we interpreted the output of each neuron at each moment of time as its instantaneous firing rate. At each time step we looked at the network activity in the previous step, calculated total synaptic inputs to each neuron, and used a sliding logistic function to translate these synaptic inputs to postsynaptic spiking (see Methods for details).
 
 \begin{figure*}[!t]
 \includegraphics[width=\linewidth]{fig6.png}
@@ -254,52 +254,59 @@ As tectal networks are complex and noisy, it was hard to provide a clear mechani
 Developmental model. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
 \end{figure*}
 
-To allow the network develop in time, we introduced three simple developmental rules: spike-time-dependent plasticity (STDP), homeostatic plasticity, and synaptic competition. Our implementation of STDP approximated biological STDP, as observed in the tadpole tectum \citep{zhang1998stdp,mu2006stdp}: if two cells were active in two consecutive time frames, and they were connected with a synapse, the weight of this synapse was increased. Conversely, if two cells were active within the same time frame, the weight of a synapse connecting them was decreased, as it means that one cell would try to activate another cell after it had already spiked. The homeostatic plasticity rule adjusted excitability thresholds, trying to keep spiking output of each neuron constant on average \citep{pratt2007intrinsic,turrigiano2011}. The rule of synaptic competition attempted to keep constant the total strength of synaptic inputs to each neuron, as well as the total strength of outputs from each neuron, scaling all synapses of both input and output neurons towards a set target every time there was a change in synaptic efficiency \citep{hamodi2016nmda,cohen2002synreview,munz2014hebbian}.
+We then introduced three simple developmental rules: spike-time-dependent plasticity (STDP), homeostatic plasticity, and synaptic competition. Our implementation of STDP approximated biological STDP observed in the tectum \citep{zhang1998stdp,mu2006stdp}: if two cells were active one after another in two consecutive time frames, and they were connected with a synapse, the weight of this synapse was increased. Conversely, if two cells were active within the same time frame, the weight of a synapse connecting them was decreased, as it means that one cell would try to activate another cell immediately after it had spiked. The homeostatic plasticity rule adjusted excitability thresholds, trying to keep spiking output of each neuron constant on average \citep{pratt2007intrinsic,turrigiano2011}. Synaptic competition attempted to keep as close to constant as possible both the sum of synaptic inputs to each neuron, and the sum of outputs from it. In practice, it means that every time a synapse connecting neurons $i$ and $j$ increased in strength, all output synapses of neuron $i$ and all input synapses of nuron $j$ were scaled down \citep{hamodi2016nmda,cohen2002synreview,munz2014hebbian}.
 
-With these three rules at play, we exposed the model to patterned sensory stimulation, modeling retinotopic inputs from the eye. We hypothesized that in biological networks, STDP-driven changes may be amplified by a learning signal \citep{savin2014stdpreward,aswolinskiy2015stdpreward} originating either in dimming receptors in the retina \citep{baranauskas2012}, or mechanosensory systems of the hindbrain \citep{pratt2009multisens,felch2016,truszkowski2017}. We therefore only exposed our model to looming stimuli (but see sensitivity analyses described below). The network was allowed to develop for 12500 time steps (at least 500 looming stimuli), and we saved its topology at five equally spaced time points during this process, from a naive network, to the final state. We ran independent simulations 50 times, and for each network snapshot analyzed the connectivity graph, as well as the responses of each network to “model visual stimuli” that included a looming stimulus, a scrambled stimulus, and a full-field flash. We then analyzed these data in the same way as we did for biological experiments.
+With these three developmental rules at play, we exposed the model to patterned sensory stimulation, modeling retinotopic inputs from the eye. We hypothesized that during collision avoidance in real tadpoles, STDP-driven changes in the tectum may be controlled and amplified by a global learning signal \citep{savin2014stdpreward,aswolinskiy2015stdpreward} originating either in dimming receptors in the retina \citep{baranauskas2012}, or form mechanosensory systems of the hindbrain, after unsuccessful collision avoidance \citep{pratt2009multisens,felch2016,truszkowski2017}. To model this assumption, in the main set of simulation experiments we only exposed our model to looming stimuli, as if STDP-driven changes were only implemented during looming responses (but see sensitivity analyses below). The network was allowed to develop for 12500 time steps (at least 500 looming stimuli), and we saved its topology at five equally spaced time points during this process, from a naive network, to the final state. We ran independent simulations 50 times, and for each connectivity snapshot we analyzed its weighted graph, as well as network responses to model visual stimuli that included a looming stimulus, a scrambled stimulus, and a full-field flash (same as in biological experiments).
 
 \begin{figure*}
-\includegraphics[width=\linewidth]{fig7.png}
+\includegraphics[width=\linewidth]{fig8.pdf}
 \caption{
-Model results. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
+Model results. Each plot shows how one network measure changed as the model developed. Each color of line and markers represents one model type: red for the default model, other colors for sensitivity analyses. See text for details.}
 \end{figure*}
 
-The summary of modeling results is shown in Figure 7. In development, the network became selective for looming stimuli, both in terms of the total response (by the end of development it responded to looming 99$\pm$9\% stronger than to flash) and mean selectivity (mean Cohen $d$ of responses = 1.09$\pm$0.10). The share of cells selective for looming stimuli also increased, and then saturated at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells.
+The summary of modeling results is shown in Figure 8 (red lines and markeres for the base model). In development, the network became selective for looming stimuli, both in terms of the total response (by the end of development it responded to looming 99$\pm$9\% stronger than to flash; Figure 8A) and average selectivity (mean Cohen $d$ of responses = 1.09$\pm$0.10; Figure 8B). The share of cells selective for looming stimuli also increased (Figure 8C), and then saturated at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells (Figure 8D).
 
-We then tested whether in our model the nature of visual stimuli could be reconstructed from network activation (stimulus encoding). For a dataset, consisting of equal shares of looming and non-looming stimuli, stimulus encoding increased in development, and plateaued at the prediction accuracy level of $\sim$95\%. This suggests that a retinotopic STDP-driven network can achieve highly reliable looming detection if it is equipped with an output layer, potentially representing motor neurons in the hindbrain \citep{helmbrecht2018topography}, and the weights of connections to the output layer can be tuned, e.g. via reinforcement learning.
+We then analyzed the quality of stimulus encoding, or whether in our model the identity of visual stimuli could be reconstructed from network activation. For a dataset consisting of equal shares of looming and non-looming stimuli, stimulus encoding increased in development, and plateaued at the prediction accuracy level of $\sim$95\% (Figure 8E). The fact that with multivariate logistic regression we could identify looming stimuli in 95\% of cases suggests that a retinotopic STDP-driven network can achieve reliable looming detection, as long as it is equipped with a prooperly tuned output layer. It is possible that in biological tadpoles, projections of tectal neurons to motor neurons in the hindbrain may play a role of this output layer \citep{helmbrecht2018topography}, with its weights tuned in development via reinforcement learning.
 
-Unlike in biological experiments, the model was selective for looming stimuli over scrambled stimuli at the full network level, and by the end of the training period, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells, defined as a Cohen $d$ for responses to looming compared to scramble, was 0.48$\pm$0.07; and 84\% of cells were selective for looming stimuli, which was also different from what we observed in biological experiments. The selectivity for looming over flash correlated with selectivity for scrambled over flash on a cell by cell basis ($r$= 0.17$\pm$0.10). A subset of highly selective cells did not emerge in the model, and the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Fig 5F).
+Unlike in biological experiments, the model was selective for looming stimuli over scrambled stimuli at the full network level (Figure 8F): by the end of the training, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells was 0.48$\pm$0.07 (Figure 8G); and 84\% of cells were selective for looming stimuli (Figure 8H), which was also different from what we observed in biological experiments. The selectivity for looming over flash correlated with selectivity for scrambled over flash on a cell by cell basis ($r$= 0.17$\pm$0.10). A subset of highly selective cells did not emerge in the model, and the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Figure 8I).
 
-The positioning of selective cells within the network was different in the model, compared to biological experiments. While in tadpoles, selective cells tended to be located in the middle of the retinotopic field, in the model they tended to be located on the periphery, and selectivity for looming stimuli positively correlated with the distance from the network center. Similar to tadpoles, however, this correlation disappeared in development (from $r\sim$ 0.75 in a naive network, to $r\sim$0.25 in a trained network). Despite the fact that the edges of looming stimuli generally traveled from the center of the retinotopic field to the periphery, there was no correlation between the weight of a cell-to-cell connection and its orientation away from the network center ($r$=8e-5), which means that connections were equally likely to face outward and inward. Similarly to biological networks, selective cells tended to be closer to each other (29$\pm$3\% closer) than expected by chance, yet unlike for biological networks, this locality of connections was refined in developments.
+The position of selective cells within the network was different in the model, compared to biological experiments. While in tadpoles, selective cells tended to be located in the middle of the retinotopic field, in the model they tended to be located on the periphery, and selectivity for looming stimuli positively correlated with the distance from the network center (Figure 8J). Similar to tadpoles, however, this correlation disappeared in development (from $r\sim$ 0.75 in a naive network, to $r\sim$0.25 in a trained network). Similarly to biological networks, selective cells tended to be closer to each other (down to 71$\pm$3\% of distance expected for random connections; Figure 8K) than expected by chance, yet unlike for biological networks, this locality of connections was refined in development.
 
-We then looked at topological and functional correlates of looming selectivity in model networks. Selective cells tended to be more spiky ($r$=0.34$\pm$0.12), and usually were not a part of a cluster (final correlation with local clustering coefficient $r$=$-$0.26$\pm$0.12). Unlike in biological networks, in the model selective sells were not special in terms of their Katz centrality ($r$=0.02$\pm$0.13), and they did not tend to receive an unusual number of incoming connections ($r=$0.00$\pm$0.12). As in biological experiments, selective cells tended to be connected to each other (weighted assortativity of 0.24$\pm$0.07). In naive networks, the majority ($\sim$85\%) of strong edges (top 50\% of edges by weight) tended to lead from less selective sells to more selective ones, but in developed networks this share was reduced to chance value (51$\pm$0.03), matching our results from biological networks.
+%Even though edges of looming stimuli generally traveled from the center of the field to the periphery, there was no correlation between the weight of a cell-to-cell connection and its orientation away from the network center ($r$=8e-5), which means that connections were equally likely to face outward and inward.
 
-The variability of responses to looming stimuli over time, quantified as the number of principal components required to describe 80\% of response variability, mildly increased with network development, from 28$\pm$1 to 37$\pm$1. The number of ensembles detected in the network did not change, and stayed around 8 to 8.5$\pm$0.5, but the share of variance in network responses explained by the involvement of different ensembles increased from $\sim$35\% in naive networks, to $\sim$50\% by the end of learning. As in biological results, cells that formed an ensemble were about 10\% closer to each other than random two cells in the network, and were 2.2$\pm$0.5 times more likely to be connected to each other.
+We then looked at topological and functional correlates of looming selectivity in model networks. Selective cells tended to be more spiky ($r$=0.34$\pm$0.12; Figure 8L, red line), and usually were not a part of a cluster (Figure 8M; final correlation with local clustering coefficient $r$=$-$0.26$\pm$0.12). Unlike in biological networks, in the model selective sells were not special in terms of their Katz centrality ($r$=0.02$\pm$0.13; Figure 8N), and they did not tend to receive an unusual number of incoming connections ($r=$0.00$\pm$0.12; Figure 8O). As in biological experiments, selective cells tended to be connected to each other (weighted assortativity of 0.24$\pm$0.07; Figure 8P). %In naive networks, the majority ($\sim$85\%) of strong edges (top 50\% of edges by weight) tended to lead from less selective sells to more selective ones, but in developed networks this share was reduced to chance value (51$\pm$0.03), matching our results from biological networks.
 
-The distribution of degrees in the model was similar to that in biological experiments: the share of weakly connected cells (weighted in-degree $<$ 0.5) plummeted from $\sim$50\% in naive networks to 9$\pm$2\% by the end of training. On the contrary, the share of cells with degrees of 1 and 2 increased from $\sim$40\% to 83$\pm$2\%. With this changes, the power constant for the degree distribution changed from $\gamma \sim -$1.5 to $-$1.96$\pm$0.03 for both in- and out-degrees, which also qualitatively matched changes in biological experiments.
+The variability of responses to looming stimuli over time, quantified as the number of principal components required to describe 80\% of response variability, mildly increased with network development, from 28$\pm$1 to 37$\pm$1 (Figure 8Q). The number of detected network ensembles did not change in development, staying around 15 (Figure 8R), but the share of variance in network responses explained by the involvement of different ensembles increased from $\sim$35\% in naive networks, to $\sim$50\% by the end of learning. As in biological networks, cells that formed an ensemble were slightly more likely to be connected to each other (Figure 8S), and were about 40\% closer to each other than any two random cells in the network (Figure 8T).
 
-Finally, we observed that most network measures changed with network development (Figure 6): efficiency and modularity increased, while clustering decreased. In all three cases, the changes were mainly due to changes in weight and degree distribution, as they persisted if calculated on networks randomized with degree-preserving rewiring. The hierarchical flow increased mildly in development, which was entirely due to structured changes in network topology, as the effect was not present in rewired graphs. A robust increase in modularity may seem to be in contradiction with a stable number of ensembles detected in the network, as network modules are expected to form activity ensembles \citep{triplett2018emergence}. We assume that the reason for this difference was that both in biological and computational experiments, we tried to identify ensembles in highly structured responses, and not in long recordings of spontaneous activity.
+The distribution of degrees in the model was similar to that in biological experiments: the share of weakly connected cells (weighted in-degree $<$ 0.5) plummeted from $\sim$50\% in naive networks to 9$\pm$2\% by the end of training. On the contrary, the share of cells with degrees of 1 and 2 increased from $\sim$40\% to 83$\pm$2\%. With this changes, the power constant for the degree distribution changed from $\gamma \sim -$1.5 to $-$1.96$\pm$0.03 for both in- and out-degrees (Figure 8U), which also qualitatively matched changes in biological experiments. The share of reciprocally connected cells also decreased in development (Figure 8V).
 
-To conclude whether most predictions of the model were confirmed in experiments, we formulated a list of “atomic”, elementary statements about each of the measures were analyzed, looking at whether they changed in development, whether they increased or decreased, and whether they differed from similar measures in a randomized network (Table 1, first two columns). Overall, the model and the experiments showed similar selectivity for looming, but different selectivity to scrambled stimuli. The interplay between cell position and connectivity was also similar, except for the spatial distribution of looming-selective cells within the retinotopic map, which was peripheral in the model, but central in tadpoles. Changes in degree distributions were well matched, but with a possible exception of modularity, none of other network measures matched. When correlations between different measures of node centrality and cell selectivity were considered, some of them matched, but most did not.
+Finally, we observed that most network measures changed with network development: efficiency (Figure 8W) and modularity (Figure 8X) increased, while clustering (Figure 8Y) decreased. In all three cases, the changes were mainly due to changes in weight and degree distribution, as they persisted if calculated on networks randomized with degree-preserving rewiring. The hierarchical flow (Figure 8Z) increased mildly in development, which was entirely due to structured changes in network topology, as the effect was not present in rewired graphs. A robust increase in modularity may seem to be in contradiction with a stable number of activation ensembles in the network, as network modules may be expected to form activity ensembles. We assume that the reason for this difference was that both in biological and computational experiments we identified ensembles from activity in in response to highly structured sensory inputs, rather than from long recordings of spontaneous activity \citep{triplett2018emergence}.
+
+To conclude whether predictions of our model matched biological experiments, we formulated a list of “atomic”, elementary statements about each of the measures we analyzed, looking at whether they changed in development, whether they increased or decreased, and whether they differed from similar measures in a randomized network (Table 1, first two columns). Overall, the model and the experiments showed similar selectivity for looming over flash, but different selectivity to looming over scrambled stimuli. The interplay between cell position and connectivity was similar, except for the spatial distribution of looming-selective cells within the retinotopic map, which was peripheral in the model, but central in tadpoles. Changes in degree distributions were well matched, yet, with a possible exception of modularity, none of other network measures matched. When correlations between different types of node centrality and cell selectivity were considered, some of them matched, but most did not.
 
 %\newgeometry{left=1in} % This page will have smaller margins
 \begin{table}
-    \input{table1.tex}
+    \input{table1.tex}[th]
     \caption{A summary of network phenomena observed in biological experiments, in comparison with the base model, and several reduced models. For clarity, we use $\checkmark$ for "yes", $\times$ for "no", $\land$ for "increase", $\lor$ for "decrease", $\land \lor$ for "increase followed by decrease", and $=$ for "no change". FL stands for "Flash-Looming" comparisons; SL - Scrambled-Looming comparisons; corr denotes correlation.}
 \end{table}
 %\restoregeometry
 
+
 \subsection*{Sensitivity analysis}
 
-While a comparison with one faithfully constructed model is important, a better approach is to consider a family of models, and see which elements are critical for the replication of biological results, and which ones are not essential \citep{linderman2017constrain,pauli2018repro}. For example, in our model, how important was it to assume that the plasticity happened only during actual collisions? Would  looming selectivity develop if instead of looming stimuli we used more general visual stimuli? Is structured sensory flow even necessary for the emergence of selectivity \citep{triplett2018emergence}? To answer these questions, we repeated our analysis several times, excluding different parts of the model one by one. First we repeated all computational experiments and analysis, but replaced STDP with simple symmetrical Hebbian plasticity. In a different set of modeling experiments, we removed explicit synaptic competition, by replacing it with synapse weight decay, and in yet another set we greatly decreased the amount of intrinsic plasticity present in the system. Finally, in last two sets of model runs, we let the model develop either while exposed to randomized oblique translational stimuli (instead of looming stimuli), or while exposed to random visual noise. The results of these 5 sensitivity analyses are presented in Figure XXX and Table 1.
+While a comparison with one faithfully constructed model is important, a better approach is to consider a family of models, and see which assumptions are critical for the replication of biological results, and which ones are not essential \citep{linderman2017constrain,pauli2018repro}. For example, we wondered whether it was important to assume that  plasticity was stronger during actual collisions, or whether  looming selectivity would develop if instead of looming stimuli we used more general visual stimuli. We also wondered whether structured sensory flow is even necessary for the emergence of selectivity \citep{triplett2018emergence}. To answer these questions, we rerun our model, excluding different parts of it at every set of runs. First we removed explicit synaptic competition, by replacing it with synapse weight decay (Figure 8, brown lines). In a different set of modeling experiments we greatly decreased the amount of intrinsic plasticity present in the system (Figure 8, green lines), and in yet another set we replaced STDP with simple symmetrical Hebbian plasticity (Figure 8, teal lines). Finally, in last two series of model runs, we let the model develop either while exposed to random visual noise (Figure 8, blue), or randomized oblique translational stimuli (Figure 8, pink).
 
-We found that training specifically on looming stimuli was not critical for the model, but training on structured stimuli (as opposed to noise) was. When looming stimuli were replaced by non-collision visual stimuli (Table 1, column "Visual"), almost all network parameters still developed similarly to how they did in the base model. Selectivity to looming stimuli also developed similarly, but reached 20-50\% lower selectivity values. In contrast, when patterned stimuli were replaced with uncorrelated noise (Table 1, column "Noise"), selectivity did not improve with time, and while the network still changed its efficiency, modularity, and degree distribution, it did not acquire hierarchical structure, and positioning of selective cells within the graph remained random.
+We found that training on looming stimuli was not critical (in terms of replicating predictions of a full model), but training on structured stimuli was. When looming stimuli were replaced by non-collision visual stimuli (Table 1, column "Visual"), almost all network parameters still developed similarly to how they did in the base model. Looming selectivity also showed a similar trajectory, but reached 20-50\% lower selectivity values (pink lines follow red lines in Figure 8A-J). In contrast, when patterned stimuli were replaced with uncorrelated noise (Table 1, column "Noise"), selectivity did not improve with time (blue lines are flat and low in Figure 8A-J), even though network toplogy still changed in development (Figure 8W-Z).
 
-Disruption of different developmental rules led to very different changes in network development. When STDP was replaced by simple Hebbian plasticity (Table 1, column "No STDP"), looming selectivity was similar or better than with STDP, and the network generally developed similarly, except that modularity was higher (Figure 6XXX), neuronal ensembles were more strongly interconnected (Figure XXX), and reciprocal connections between pairs of neurons remained probable (Figure XXX). This is consistent with the idea that, unlike STDP, Hebbian plasticity does not eliminate tight clusters of strongly interconnected neurons \citep{fiete2010chains}. When synaptic competition was replaced with synaptic strength decay (Table 1, column "No Syn. Comp."), the degree distribution was very different (got flatter rather than sharper); selectivity for looming stimuli was disrupted; the pattern of interactions between cell selectivity and cell centrality became unlike what was observed in the base series of experiments, and the network became strongly hierarchical. The main reason for these differences appears to be that without synaptic competition, chains of connected neurons were allowed to lead to "dead-ends" within the graph, while with competition the total output of each neuron remains roughly constant, leading to the development of cycles. Finally, when intrinsic plasticity was weakened (Table 1, column "No Intrinsic"), the network did not acquire sensitivity to looming stimuli, and had simpler response structure (both in terms of PCA results, and ensemble analysis; Figure XXX), but retained most of changes in network topology. This suggests that intrinsic plasticity is critical for learning, as without it the network was primarily driven by spontaneous activity, which structured it incorrectly.
+Disruption of individual developmental rules led to very different changes in network development. When STDP was replaced by simple Hebbian plasticity (Table 1, column "No STDP"; teal lines in Figure 8), looming selectivity was similar or better than with STDP (top lines in Figure8A,B,F,G), and the network generally developed similarly, except that modularity was higher (Figure 8X), neuronal ensembles were more strongly interconnected (Figure 8S). 
+
+When synaptic competition was replaced with synaptic strength decay (Table 1, column "No Syn. Comp."), the degree distribution was very different (got flatter rather than sharper; Figure 8U, brown lines); selectivity for looming stimuli was weakened (Figure 8C); the pattern of interactions between selectivity node centrality became unlike what was observed in the base series of experiments (Figure 8M-O), and the network became strongly hierarchical (Figure 8Z). The main reason for these differences appears to be that without synaptic competition, chains of connected neurons were allowed to lead to "dead-ends" within the graph, while with competition the total output of each neuron remained constant, leading to the development of cycles. 
+
+Finally, when intrinsic plasticity was weakened (Table 1, column "No Intrinsic"; Figure 8, green lines), looming stimuli was completely disrupted (green in Figure 8A-C,F-H), and networks had simpler response structure, both in terms of PCA results (Figure 8Q), and ensemble analysis (Figure 8R). This confirms that agile intrinsic plasticity is critical for learning, as without it the network was likely to be primarily driven by spontaneous activity, that structured it incorrectly.
 
 \section*{Discussion}
 
-In the first half of this study, we described a way to reconstruct functional connectivity in the tectum of \textit{Xenopus} tadpoles from high-speed Calcium imaging recordings, and used these reconstructions to describe several novel findings about the topology of tectal network. We show that in development, tectal networks tend to become more openwork, approaching a scalefree statistics. We also show that looming-selective cells tend to occupy a special place in this networks: they tend to be located in the middle of the receptive field for a looming stimuli, and tend to serve as "information sinks", collecting more inputs from the rest of the network, compared to non-selective cells (as accessed via both in-degree statistics, and Katz centrality).
+In the first half of this study, we described a way to reconstruct functional connectivity in the tectum of \textit{Xenopus} tadpoles from high-speed Calcium imaging recordings, and used these reconstructions to describe several novel findings about the topology of tectal network. We show that in development, tectal networks tend to become more openwork, approaching a scale-free statistics. We also show that looming-selective cells tend to occupy a special place in this networks: they tend to be located in the middle of the receptive field for a looming stimuli, and tend to serve as "information sinks", collecting more inputs from the rest of the network, compared to non-selective cells (as accessed via both in-degree statistics, and Katz centrality).
 
 In the second part of this paper, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously acquire selectivity for looming stimuli, and 2) develop a non-random network structure. We also hypothesized that these effects would be robust enough to be replicated in biological experiments. The support for this hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these seemingly robust results were not truly replicated in biological experiments, as we observed no improvement in looming detection over development, and neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising in view of a known improvement in collision detection with tadpole age \citep{dong2009}.
 
@@ -381,7 +388,7 @@ and subtracted these average responses from each trial, which resulted in a vect
 
 We then used these vectors of deviations from the mean, concatenated across all trials, to calculate a cross-correlation matrix, to see which cells tended to be unusually active or unusually inactive together:
 
-\[ c_{ij} = \text{corr}\big(a''_i(k,t)\, , \, a''_j(k,t)\big) \]
+\[ c_{ij} = \text{cor}\big(a''_i(k,t)\, , \, a''_j(k,t)\big) \]
 
 We calculated adjusted correlations $c_{ij}$ separately for each of three types of stimuli (flash, scramble, and looming), and averaged these three estimations $c_{ij}^s$, to arrive at a, hopefully, less noisy estimation of adjusted cross-correlation. We then removed negative correlations, replacing them with zeroes.
 
@@ -470,7 +477,7 @@ We also tested whether the connectivity and positioning of selective cells withi
 
 To study the distribution of cell selectivity within the graph, we used \textbf{weighted assortativity} as a measure of non-random association of selective cells into subnetworks. The formula for a mixing coefficient in a weighted directed network is given in \citep{farine2014weighted}, based on the logic from \citep{newman2003mixing} and \citep{leung2007weighted}. The original formula from \citep{newman2003mixing} for an unweighted undirected graph defines a mixing coefficient as a Pearson correlation coefficient between properties of nodes connected by edges, taken over all edges in the graph:
 
-\[ r=\underset{ij: a_{ij}=1}{\text{corr}}(x_i,x_j) \]
+\[ r=\underset{ij: a_{ij}=1}{\text{cor}}(x_i,x_j) \]
 
 leading to the following expression:
 
