--- a/table1.tex
+++ b/table1.tex
@@ -45,7 +45,7 @@ PCA complexity & = & \land & \land & \land \lor & \land & \land & \land\\
 N Ensembles, change & \times & \times & \times & \times & \times & \times & \times \\
 Ensembles are spatially local & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
 Ensembles are overconnected & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark & \checkmark\\
-\% two-way edges, change & \lor & \lor & \lor \land & \lor & \lor & \lor & \lor \\
+\% two-way edges, change & \lor & \lor & \lor & \lor & \lor & \lor & \lor \\
 \hline
 \multicolumn{8}{l}{\textbf{Connected cells:}}\\
 Are spatially close & \checkmark & \checkmark & \times & \times & \checkmark & \checkmark & \times \\
